--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "next-js-boilerplate",
-  "version": "3.0.0",
+  "name": "portfolio",
+  "version": "2.0.0",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
