--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
     "react-intersection-observer": "^9.4.0",
+    "react-pdf": "^6.2.2",
     "three": "^0.146.0"
   },
   "devDependencies": {
@@ -46,6 +47,7 @@
     "@types/jest": "^29.2.0",
     "@types/node": "^18.11.5",
     "@types/react": "^18.0.23",
+    "@types/react-pdf": "^6.2.0",
     "@types/three": "^0.144.0",
     "@typescript-eslint/eslint-plugin": "^5.41.0",
     "@typescript-eslint/parser": "^5.41.0",
@@ -84,10 +86,5 @@
     "tailwindcss": "^3.2.1",
     "typescript": "^4.8.4"
   },
-  "config": {
-    "commitizen": {
-      "path": "@commitlint/cz-commitlint"
-    }
-  },
-  "author": "Ixartz (https://github.com/ixartz)"
+  "author": "Ethan Ng"
 }
