--- a/package.json
+++ b/package.json
@@ -1,81 +1,85 @@
 {
-  "name": "portfolio",
-  "version": "2.0.0",
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "build-stats": "cross-env ANALYZE=true npm run build",
-    "export": "next export",
-    "build-prod": "run-s clean build export",
-    "clean": "rimraf .next out",
-    "lint": "next lint",
-    "check-types": "tsc --noEmit --pretty && tsc --project cypress --noEmit --pretty",
-    "commit": "cz",
-    "cypress": "cypress open",
-    "cypress:headless": "cypress run",
-    "e2e": "start-server-and-test dev http://localhost:3000 cypress",
-    "e2e:headless": "start-server-and-test dev http://localhost:3000 cypress:headless",
-    "prepare": "husky install"
-  },
-  "dependencies": {
-    "@react-spring/core": "^9.5.5",
-    "@react-spring/three": "^9.5.5",
-    "@react-three/drei": "^9.40.0",
-    "@react-three/fiber": "^8.9.0",
-    "framer-motion": "^7.6.4",
-    "hamburger-react": "^2.5.0",
-    "maath": "^0.4.2",
-    "next": "^13.0.0",
-    "next-seo": "^5.8.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-icons": "^4.6.0",
-    "react-intersection-observer": "^9.4.0",
-    "react-pdf": "^6.2.2",
-    "three": "^0.146.0"
-  },
-  "devDependencies": {
-    "@commitlint/cli": "^17.1.2",
-    "@commitlint/config-conventional": "^17.1.0",
-    "@commitlint/cz-commitlint": "^17.1.2",
-    "@next/bundle-analyzer": "^13.0.0",
-    "@testing-library/react": "^13.4.0",
-    "@types/node": "^18.11.5",
-    "@types/react": "^18.0.23",
-    "@types/react-pdf": "^6.2.0",
-    "@types/three": "^0.144.0",
-    "@typescript-eslint/eslint-plugin": "^5.41.0",
-    "@typescript-eslint/parser": "^5.41.0",
-    "autoprefixer": "^10.4.12",
-    "commitizen": "^4.2.5",
-    "cross-env": "^7.0.3",
-    "cssnano": "^5.1.13",
-    "cypress": "^10.11.0",
-    "eslint": "^8.26.0",
-    "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-config-airbnb-typescript": "^17.0.0",
-    "eslint-config-next": "^13.0.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-cypress": "^2.12.1",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-jsx-a11y": "^6.6.1",
-    "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-react": "^7.31.10",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-simple-import-sort": "^8.0.0",
-    "eslint-plugin-tailwindcss": "^3.6.2",
-    "eslint-plugin-testing-library": "^5.9.1",
-    "eslint-plugin-unused-imports": "^2.0.0",
-    "husky": "^8.0.1",
-    "lint-staged": "^13.0.3",
-    "npm-run-all": "^4.1.5",
-    "postcss": "^8.4.18",
-    "prettier": "^2.7.1",
-    "rimraf": "^3.0.2",
-    "start-server-and-test": "^1.14.0",
-    "tailwindcss": "^3.2.1",
-    "typescript": "^4.8.4"
-  },
-  "author": "Ethan Ng"
+    "name": "portfolio",
+    "version": "2.0.0",
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "build-stats": "cross-env ANALYZE=true npm run build",
+        "export": "next export",
+        "build-prod": "run-s clean build export",
+        "clean": "rimraf .next out",
+        "lint": "next lint",
+        "check-types": "tsc --noEmit --pretty && tsc --project cypress --noEmit --pretty",
+        "commit": "cz",
+        "cypress": "cypress open",
+        "cypress:headless": "cypress run",
+        "e2e": "start-server-and-test dev http://localhost:3000 cypress",
+        "e2e:headless": "start-server-and-test dev http://localhost:3000 cypress:headless",
+        "prepare": "husky install"
+    },
+    "dependencies": {
+        "@react-spring/core": "^9.5.5",
+        "@react-spring/three": "^9.5.5",
+        "@react-three/drei": "^9.40.0",
+        "@react-three/fiber": "^8.9.0",
+        "axios": "^1.4.0",
+        "bson": "^5.3.0",
+        "framer-motion": "^7.6.4",
+        "hamburger-react": "^2.5.0",
+        "maath": "^0.4.2",
+        "mongoose": "^7.2.2",
+        "next": "^13.0.0",
+        "next-seo": "^5.8.0",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "react-ga": "^3.3.1",
+        "react-icons": "^4.6.0",
+        "react-intersection-observer": "^9.4.0",
+        "react-pdf": "^6.2.2",
+        "tailwindcss": "^3.3.1",
+        "three": "^0.146.0"
+    },
+    "devDependencies": {
+        "@commitlint/cli": "^17.1.2",
+        "@commitlint/config-conventional": "^17.1.0",
+        "@commitlint/cz-commitlint": "^17.1.2",
+        "@next/bundle-analyzer": "^13.0.0",
+        "@testing-library/react": "^13.4.0",
+        "@types/node": "^18.11.5",
+        "@types/react": "^18.0.23",
+        "@types/react-pdf": "^6.2.0",
+        "@types/three": "^0.144.0",
+        "@typescript-eslint/eslint-plugin": "^5.41.0",
+        "@typescript-eslint/parser": "^5.41.0",
+        "autoprefixer": "^10.4.12",
+        "commitizen": "^4.2.5",
+        "cross-env": "^7.0.3",
+        "cssnano": "^5.1.13",
+        "cypress": "^10.11.0",
+        "eslint": "^8.26.0",
+        "eslint-config-airbnb-base": "^15.0.0",
+        "eslint-config-airbnb-typescript": "^17.0.0",
+        "eslint-config-next": "^13.0.0",
+        "eslint-config-prettier": "^8.5.0",
+        "eslint-plugin-cypress": "^2.12.1",
+        "eslint-plugin-import": "^2.26.0",
+        "eslint-plugin-jsx-a11y": "^6.6.1",
+        "eslint-plugin-prettier": "^4.2.1",
+        "eslint-plugin-react": "^7.31.10",
+        "eslint-plugin-react-hooks": "^4.6.0",
+        "eslint-plugin-simple-import-sort": "^8.0.0",
+        "eslint-plugin-tailwindcss": "^3.6.2",
+        "eslint-plugin-testing-library": "^5.9.1",
+        "eslint-plugin-unused-imports": "^2.0.0",
+        "husky": "^8.0.1",
+        "lint-staged": "^13.0.3",
+        "npm-run-all": "^4.1.5",
+        "postcss": "^8.4.21",
+        "prettier": "^2.8.7",
+        "rimraf": "^3.0.2",
+        "start-server-and-test": "^1.14.0",
+        "typescript": "^4.9.5"
+    },
+    "author": "Ethan Ng"
 }
