--- a/package.json
+++ b/package.json
@@ -10,13 +10,7 @@
         "build-prod": "run-s clean build export",
         "clean": "rimraf .next out",
         "lint": "next lint",
-        "check-types": "tsc --noEmit --pretty && tsc --project cypress --noEmit --pretty",
-        "commit": "cz",
-        "cypress": "cypress open",
-        "cypress:headless": "cypress run",
-        "e2e": "start-server-and-test dev http://localhost:3000 cypress",
-        "e2e:headless": "start-server-and-test dev http://localhost:3000 cypress:headless",
-        "prepare": "husky install"
+        "commit": "cz"
     },
     "dependencies": {
         "@react-spring/core": "^9.5.5",
@@ -56,13 +50,11 @@
         "commitizen": "^4.2.5",
         "cross-env": "^7.0.3",
         "cssnano": "^5.1.13",
-        "cypress": "^10.11.0",
         "eslint": "^8.26.0",
         "eslint-config-airbnb-base": "^15.0.0",
         "eslint-config-airbnb-typescript": "^17.0.0",
         "eslint-config-next": "^13.0.0",
         "eslint-config-prettier": "^8.5.0",
-        "eslint-plugin-cypress": "^2.12.1",
         "eslint-plugin-import": "^2.26.0",
         "eslint-plugin-jsx-a11y": "^6.6.1",
         "eslint-plugin-prettier": "^4.2.1",
@@ -72,7 +64,6 @@
         "eslint-plugin-tailwindcss": "^3.6.2",
         "eslint-plugin-testing-library": "^5.9.1",
         "eslint-plugin-unused-imports": "^2.0.0",
-        "husky": "^8.0.1",
         "lint-staged": "^13.0.3",
         "npm-run-all": "^4.1.5",
         "postcss": "^8.4.21",
@@ -81,5 +72,6 @@
         "start-server-and-test": "^1.14.0",
         "typescript": "^4.9.5"
     },
-    "author": "Ethan Ng"
+    "author": "Ethan Ng",
+    "license": "MIT"
 }
