--- a/package.json
+++ b/package.json
@@ -7,10 +7,16 @@
         "start": "next start",
         "build-stats": "cross-env ANALYZE=true npm run build",
         "export": "next export",
-        "build-prod": "yarn clean && yarn build && yarn export",
+        "build-prod": "run-s clean build export",
         "clean": "rimraf .next out",
         "lint": "next lint",
-        "commit": "cz"
+        "check-types": "tsc --noEmit --pretty && tsc --project cypress --noEmit --pretty",
+        "commit": "cz",
+        "cypress": "cypress open",
+        "cypress:headless": "cypress run",
+        "e2e": "start-server-and-test dev http://localhost:3000 cypress",
+        "e2e:headless": "start-server-and-test dev http://localhost:3000 cypress:headless",
+        "prepare": "husky install"
     },
     "dependencies": {
         "@react-spring/core": "^9.5.5",
@@ -30,7 +36,7 @@
         "react-ga": "^3.3.1",
         "react-icons": "^4.6.0",
         "react-intersection-observer": "^9.4.0",
-        "react-pdf": "^6.2.2",
+        "tailwind-merge": "^1.13.2",
         "tailwindcss": "^3.3.1",
         "three": "^0.146.0"
     },
@@ -42,7 +48,6 @@
         "@testing-library/react": "^13.4.0",
         "@types/node": "^18.11.5",
         "@types/react": "^18.0.23",
-        "@types/react-pdf": "^6.2.0",
         "@types/three": "^0.144.0",
         "@typescript-eslint/eslint-plugin": "^5.41.0",
         "@typescript-eslint/parser": "^5.41.0",
@@ -50,11 +55,13 @@
         "commitizen": "^4.2.5",
         "cross-env": "^7.0.3",
         "cssnano": "^5.1.13",
+        "cypress": "^10.11.0",
         "eslint": "^8.26.0",
         "eslint-config-airbnb-base": "^15.0.0",
         "eslint-config-airbnb-typescript": "^17.0.0",
         "eslint-config-next": "^13.0.0",
         "eslint-config-prettier": "^8.5.0",
+        "eslint-plugin-cypress": "^2.12.1",
         "eslint-plugin-import": "^2.26.0",
         "eslint-plugin-jsx-a11y": "^6.6.1",
         "eslint-plugin-prettier": "^4.2.1",
@@ -64,6 +71,7 @@
         "eslint-plugin-tailwindcss": "^3.6.2",
         "eslint-plugin-testing-library": "^5.9.1",
         "eslint-plugin-unused-imports": "^2.0.0",
+        "husky": "^8.0.1",
         "lint-staged": "^13.0.3",
         "npm-run-all": "^4.1.5",
         "postcss": "^8.4.21",
@@ -72,6 +80,5 @@
         "start-server-and-test": "^1.14.0",
         "typescript": "^4.9.5"
     },
-    "author": "Ethan Ng",
-    "license": "MIT"
+    "author": "Ethan Ng"
 }
