--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,10 @@
 # testing
 /coverage
 
+# cypress
+cypress/screenshots
+cypress/videos
+
 # next.js
 /.next
 /out
@@ -31,12 +35,8 @@ yarn-error.log*
 
 # dotenv local files
 .env*.local
-.env
 
 # local folder
 local
-
-# vercel
-.vercel
 
 .history
