--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
         "react-intersection-observer": "^9.4.0",
         "tailwind-merge": "^1.13.2",
         "tailwindcss": "^3.3.1",
-        "three": "^0.146.0"
+        "three": "^0.146.0",
+        "cypress": "^10.11.0"
     },
     "devDependencies": {
         "@commitlint/cli": "^17.1.2",
@@ -55,7 +56,6 @@
         "commitizen": "^4.2.5",
         "cross-env": "^7.0.3",
         "cssnano": "^5.1.13",
-        "cypress": "^12.14.0",
         "eslint": "^8.26.0",
         "eslint-config-airbnb-base": "^15.0.0",
         "eslint-config-airbnb-typescript": "^17.0.0",
@@ -74,11 +74,11 @@
         "husky": "^8.0.1",
         "lint-staged": "^13.0.3",
         "npm-run-all": "^4.1.5",
-        "postcss": "^8.4.21",
-        "prettier": "^2.8.7",
+        "postcss": "^8.4.18",
+        "prettier": "^2.7.1",
         "rimraf": "^3.0.2",
         "start-server-and-test": "^1.14.0",
-        "typescript": "^4.9.5"
+        "typescript": "^4.8.4"
     },
     "author": "Ethan Ng"
 }
