--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
         "start": "next start",
         "build-stats": "cross-env ANALYZE=true npm run build",
         "export": "next export",
-        "build-prod": "run-s clean build export",
+        "build-prod": "run-s clean build",
         "clean": "rimraf .next out",
         "lint": "next lint",
         "check-types": "tsc --noEmit --pretty && tsc --project cypress --noEmit --pretty",
