--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
         "tailwind-merge": "^1.13.2",
         "tailwindcss": "^3.3.1",
         "three": "^0.146.0",
+        "typescript": "^4.8.4",
         "cypress": "^10.11.0"
     },
     "devDependencies": {
@@ -77,8 +78,7 @@
         "postcss": "^8.4.18",
         "prettier": "^2.7.1",
         "rimraf": "^3.0.2",
-        "start-server-and-test": "^1.14.0",
-        "typescript": "^4.8.4"
+        "start-server-and-test": "^1.14.0"
     },
     "author": "Ethan Ng"
 }
