--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
         "start": "next start",
         "build-stats": "cross-env ANALYZE=true npm run build",
         "export": "next export",
-        "build-prod": "run-s clean build",
+        "build-prod": "run-s clean build export",
         "clean": "rimraf .next out",
         "lint": "next lint",
         "check-types": "tsc --noEmit --pretty && tsc --project cypress --noEmit --pretty",
@@ -19,21 +19,18 @@
         "prepare": "husky install"
     },
     "dependencies": {
-        "@next/bundle-analyzer": "^13.0.0",
         "@react-spring/core": "^9.5.5",
         "@react-spring/three": "^9.5.5",
         "@react-three/drei": "^9.40.0",
         "@react-three/fiber": "^8.9.0",
         "axios": "^1.4.0",
         "bson": "^5.3.0",
-        "eslint": "^8.26.0",
         "framer-motion": "^7.6.4",
         "hamburger-react": "^2.5.0",
         "maath": "^0.4.2",
         "mongoose": "^7.2.2",
         "next": "^13.0.0",
         "next-seo": "^5.8.0",
-        "npm-run-all": "^4.1.5",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-ga": "^3.3.1",
@@ -42,13 +39,13 @@
         "tailwind-merge": "^1.13.2",
         "tailwindcss": "^3.3.1",
         "three": "^0.146.0",
-        "typescript": "^4.8.4",
         "cypress": "^10.11.0"
     },
     "devDependencies": {
         "@commitlint/cli": "^17.1.2",
         "@commitlint/config-conventional": "^17.1.0",
         "@commitlint/cz-commitlint": "^17.1.2",
+        "@next/bundle-analyzer": "^13.0.0",
         "@testing-library/react": "^13.4.0",
         "@types/node": "^18.11.5",
         "@types/react": "^18.0.23",
@@ -59,6 +56,7 @@
         "commitizen": "^4.2.5",
         "cross-env": "^7.0.3",
         "cssnano": "^5.1.13",
+        "eslint": "^8.26.0",
         "eslint-config-airbnb-base": "^15.0.0",
         "eslint-config-airbnb-typescript": "^17.0.0",
         "eslint-config-next": "^13.0.0",
@@ -75,10 +73,12 @@
         "eslint-plugin-unused-imports": "^2.0.0",
         "husky": "^8.0.1",
         "lint-staged": "^13.0.3",
+        "npm-run-all": "^4.1.5",
         "postcss": "^8.4.18",
         "prettier": "^2.7.1",
         "rimraf": "^3.0.2",
-        "start-server-and-test": "^1.14.0"
+        "start-server-and-test": "^1.14.0",
+        "typescript": "^4.8.4"
     },
     "author": "Ethan Ng"
 }
