--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
   publish = "out"
-  command = "yarn build"
+  command = "yarn CI"
 
 [build.environment]
   NETLIFY_NEXT_PLUGIN_SKIP = "true"
