--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
     "version": "2.0.0",
     "scripts": {
         "dev": "next dev",
-        "CI": "next build",
+        "build": "next build",
         "start": "next start",
         "build-stats": "cross-env ANALYZE=true npm run build",
         "export": "next export",
-        "build-prod": "run-s clean build export",
+        "CI": "run-s clean build",
         "clean": "rimraf .next out",
         "lint": "next lint",
         "check-types": "tsc --noEmit --pretty && tsc --project cypress --noEmit --pretty",
