--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
         "start": "next start",
         "build-stats": "cross-env ANALYZE=true npm run build",
         "export": "next export",
-        "CI": "run-s clean build",
+        "build-prod": "run-s clean build start",
         "clean": "rimraf .next out",
         "lint": "next lint",
         "check-types": "tsc --noEmit --pretty && tsc --project cypress --noEmit --pretty",
@@ -34,11 +34,8 @@
         "next-seo": "^5.8.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "react-ga": "^3.3.1",
         "react-icons": "^4.6.0",
         "react-intersection-observer": "^9.4.0",
-        "tailwind-merge": "^1.13.2",
-        "tailwindcss": "^3.3.1",
         "three": "^0.146.0"
     },
     "devDependencies": {
@@ -78,6 +75,8 @@
         "prettier": "^2.7.1",
         "rimraf": "^3.0.2",
         "start-server-and-test": "^1.14.0",
+        "tailwind-merge": "^1.13.2",
+        "tailwindcss": "^3.3.1",
         "typescript": "^4.8.4"
     },
     "author": "Ethan Ng"
