--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,6 @@
 [build]
-  publish = "out"
+  functions = "out_functions"
+  publish   = "out_publish"
   command = "yarn build-prod"
 
 [build.environment]
