--- a/package.json
+++ b/package.json
@@ -36,10 +36,10 @@
         "cypress": "^10.11.0",
         "framer-motion": "^7.6.4",
         "hamburger-react": "^2.5.0",
+        "inquirer": "^8.0.0",
         "maath": "^0.4.2",
         "mongoose": "^7.2.2",
         "next": "^13.0.0",
-        "next-on-netlify": "^3.0.1",
         "next-seo": "^5.8.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
