--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,5 @@
 [build]
-  functions = "out_functions"
-  publish   = "out_publish"
+  publish = "out"
   command = "yarn build-prod"
 
 [build.environment]
