--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "@react-spring/three": "^9.5.5",
         "@react-three/drei": "^9.40.0",
         "@react-three/fiber": "^8.9.0",
+        "@vercel/analytics": "^1.0.1",
         "axios": "^1.4.0",
         "bson": "^5.3.0",
         "cypress": "^10.11.0",
