--- a/package.json
+++ b/package.json
@@ -26,6 +26,13 @@
         "prepare": "husky install"
     },
     "dependencies": {
+        "@hookform/resolvers": "^3.3.2",
+        "@radix-ui/react-dialog": "^1.0.5",
+        "@radix-ui/react-label": "^2.0.2",
+        "@radix-ui/react-popover": "^1.0.7",
+        "@radix-ui/react-select": "^2.0.0",
+        "@radix-ui/react-slot": "^1.0.2",
+        "@radix-ui/react-toast": "^1.1.5",
         "@react-spring/core": "^9.5.5",
         "@react-spring/three": "^9.5.5",
         "@react-three/drei": "^9.40.0",
@@ -33,21 +40,30 @@
         "@vercel/analytics": "^1.0.1",
         "axios": "^1.4.0",
         "bson": "^5.3.0",
+        "class-variance-authority": "^0.7.0",
+        "clsx": "^2.0.0",
+        "cn": "^0.1.1",
         "cypress": "^10.11.0",
+        "date-fns": "^2.30.0",
         "framer-motion": "^7.6.4",
         "hamburger-react": "^2.5.0",
         "inquirer": "^8.0.0",
+        "lucide-react": "^0.288.0",
         "maath": "^0.4.2",
         "mongoose": "^7.2.2",
         "next": "^13.0.0",
         "next-seo": "^5.8.0",
         "react": "^18.2.0",
+        "react-day-picker": "^8.9.1",
         "react-dom": "^18.2.0",
+        "react-hook-form": "^7.47.0",
         "react-icons": "^4.6.0",
         "react-intersection-observer": "^9.4.0",
-        "tailwind-merge": "^1.13.2",
+        "tailwind-merge": "^1.14.0",
         "tailwindcss": "^3.3.1",
-        "three": "^0.146.0"
+        "tailwindcss-animate": "^1.0.7",
+        "three": "^0.146.0",
+        "zod": "^3.22.4"
     },
     "devDependencies": {
         "@commitlint/cli": "^17.1.2",
