--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "tailwindcss": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.146.0",
+    "use-sound": "^4.0.1",
     "zod": "^3.22.4"
   },
   "devDependencies": {
