--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@react-spring/three": "^9.5.5",
     "@react-three/drei": "^9.40.0",
     "@react-three/fiber": "^8.9.0",
+    "@studio-freight/lenis": "^1.0.27",
     "@vercel/analytics": "^1.0.1",
     "axios": "^1.4.0",
     "bson": "^5.3.0",
@@ -45,12 +46,13 @@
     "cypress": "^10.11.0",
     "date-fns": "^2.30.0",
     "framer-motion": "^7.6.4",
+    "gsap": "^3.12.2",
     "hamburger-react": "^2.5.0",
     "inquirer": "^8.0.0",
     "lucide-react": "^0.288.0",
     "maath": "^0.4.2",
     "mongoose": "^7.2.2",
-    "next": "^13.0.0",
+    "next": "latest",
     "next-seo": "^5.8.0",
     "react": "^18.2.0",
     "react-day-picker": "^8.9.1",
