--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@react-spring/three": "^9.5.5",
     "@react-three/drei": "^9.40.0",
     "@react-three/fiber": "^8.9.0",
+    "@splinetool/r3f-spline": "^1.0.2",
     "@studio-freight/lenis": "^1.0.27",
     "@vercel/analytics": "^1.0.1",
     "axios": "^1.4.0",
@@ -46,6 +47,7 @@
     "cypress": "^10.11.0",
     "date-fns": "^2.30.0",
     "framer-motion": "^7.6.4",
+    "geist": "^1.0.0",
     "gsap": "^3.12.2",
     "hamburger-react": "^2.5.0",
     "inquirer": "^8.0.0",
