--- a/.eslintrc
+++ b/.eslintrc
@@ -2,27 +2,15 @@
     // Configuration for JavaScript files
     "extends": [
         "airbnb-base",
-        "next/core-web-vitals", // Needed to avoid warning in next.js build: 'The Next.js plugin was not detected in your ESLint configuration'
+        "next/core-web-vitals",
         "plugin:prettier/recommended"
     ],
-    "rules": {
-        "prettier/prettier": [
-            "error",
-            {
-                "tabWidth": 4,
-                "useTabs": true,
-                "endOfLine": "auto"
-            }
-        ]
-    },
     "overrides": [
         // Configuration for TypeScript files
         {
             "files": ["**/*.ts", "**/*.tsx"],
-            "plugins": ["@typescript-eslint", "unused-imports", "tailwindcss", "simple-import-sort"],
+            "plugins": ["@typescript-eslint", "unused-imports"],
             "extends": [
-                "next",
-                "plugin:tailwindcss/recommended",
                 "airbnb-typescript",
                 "next/core-web-vitals",
                 "plugin:prettier/recommended"
@@ -31,23 +19,51 @@
                 "project": "./tsconfig.json"
             },
             "rules": {
-                // "prettier/prettier": 0,
                 "react/destructuring-assignment": "off", // Vscode doesn't support automatically destructuring, it's a pain to add a new variable
-                "jsx-a11y/anchor-is-valid": "off", // Next.js uses its own internal link system
+                "jsx-a11y/anchor-is-valid": "off", // Next.js use his own internal link system
                 "react/require-default-props": "off", // Allow non-defined react props as undefined
                 "react/jsx-props-no-spreading": "off", // _app.tsx uses spread operator and also, react-hook-form
-                "react-hooks/exhaustive-deps": "off", // Incorrectly report needed dependency with Next.js router
                 "@next/next/no-img-element": "off", // We currently not using next/image because it isn't supported with SSG mode
+                "@next/next/no-html-link-for-pages": "off",
+                "import/order": [
+                    "warn",
+                    {
+                        "groups": ["builtin", "external", "internal"],
+                        "pathGroups": [
+                            {
+                                "pattern": "react",
+                                "group": "external",
+                                "position": "before"
+                            }
+                        ],
+                        "pathGroupsExcludedImportTypes": ["react"],
+                        "newlines-between": "always",
+                        "alphabetize": {
+                            "order": "asc",
+                            "caseInsensitive": true
+                        }
+                    }
+                ],
                 "@typescript-eslint/comma-dangle": "off", // Avoid conflict rule between Eslint and Prettier
-                "@typescript-eslint/consistent-type-imports": "error", // Ensure `import type` is used when it's necessary
                 "import/prefer-default-export": "off", // Named export is easier to refactor automatically
-                "simple-import-sort/imports": "error", // Import configuration for `eslint-plugin-simple-import-sort`
-                "simple-import-sort/exports": "error", // Export configuration for `eslint-plugin-simple-import-sort`
+                "class-methods-use-this": "off", // _document.tsx use render method without `this` keyword
                 "@typescript-eslint/no-unused-vars": "off",
-                "unused-imports/no-unused-imports": "error",
-                "unused-imports/no-unused-vars": ["error", { "argsIgnorePattern": "^_" }],
-                "tailwindcss/no-custom-classname": "off",
-                "tailwindcss/enforces-negative-arbitrary-values": "off"
+                "unused-imports/no-unused-imports": "warn",
+                "unused-imports/no-unused-vars": ["off"],
+                "import/no-extraneous-dependencies": "off",
+                "import/extensions": "off",
+                "no-underscore-dangle": "off",
+                "no-async-promise-executor": "off",
+                "no-nested-ternary": "off",
+                "no-param-reassign": "off",
+                "no-restricted-syntax": "off",
+                "no-continue": "off",
+                "prettier/prettier": [
+                    "warn",
+                    {
+                        "endOfLine": "auto"
+                    }
+                ]
             }
         }
     ]
