--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,9 +1,10 @@
 {
-  "recommendations": [
-    "dbaeumer.vscode-eslint",
-    "esbenp.prettier-vscode",
-    "mikestead.dotenv",
-    "csstools.postcss",
-    "bradlc.vscode-tailwindcss"
-  ]
+    "recommendations": [
+        "dbaeumer.vscode-eslint",
+        "esbenp.prettier-vscode",
+        "mikestead.dotenv",
+        "csstools.postcss",
+        "blanu.vscode-styled-jsx",
+        "bradlc.vscode-tailwindcss"
+    ]
 }
