--- a/package.json
+++ b/package.json
@@ -31,16 +31,13 @@
         "@radix-ui/react-label": "^2.0.2",
         "@radix-ui/react-popover": "^1.0.7",
         "@radix-ui/react-select": "^2.0.0",
-        "@radix-ui/react-slot": "^1.0.2",
+        "@radix-ui/react-slot": "^1.1.0",
         "@react-spring/core": "^9.5.5",
         "@react-spring/three": "^9.5.5",
         "@react-three/drei": "^9.40.0",
         "@react-three/fiber": "^8.9.0",
         "@splinetool/r3f-spline": "^1.0.2",
-        "@studio-freight/lenis": "^1.0.27",
         "@vercel/analytics": "^1.0.1",
-        "axios": "^1.4.0",
-        "bson": "^5.3.0",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.0.0",
         "cn": "^0.1.1",
@@ -48,13 +45,11 @@
         "date-fns": "^2.30.0",
         "framer-motion": "^7.6.4",
         "geist": "^1.0.0",
-        "gsap": "^3.12.2",
         "hamburger-react": "^2.5.0",
         "inquirer": "^8.0.0",
         "lucide-react": "^0.288.0",
         "maath": "^0.4.2",
-        "mongoose": "^7.2.2",
-        "next": "latest",
+        "next": "13.4.1",
         "next-seo": "^5.8.0",
         "prettier-plugin-tailwindcss": "^0.5.6",
         "react": "^18.2.0",
