--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
         "react-hook-form": "^7.47.0",
         "react-icons": "^4.12.0",
         "react-intersection-observer": "^9.4.0",
+        "sharp": "^0.33.5",
         "tailwind-merge": "^1.14.0",
         "tailwindcss": "^3.3.1",
         "tailwindcss-animate": "^1.0.7",
