--- a/public/manifest.json
+++ b/public/manifest.json
@@ -4,7 +4,7 @@
     "description": "Ethan Ng is a software engineer who loves designing and building applications.",
     "icons": [
         {
-            "src": "favicon.ico",
+            "src": "favicon.svg",
             "sizes": "64x64 32x32 24x24 16x16",
             "type": "image/x-icon"
         }
